--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,4 @@
 1. Add a feature for configuring a pin as input pull-up.
 2. Add a feature for disabling pull-up (setting PUD bit in MCUCR)
+3. Fix TogglePin() in gpio.h
+4. Add External Interrupt
